--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.1",
     "electron-updater": "^6.1.7",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
