feat: add MCPM service with tests

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -9,6 +9,10 @@ files:
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
   - '!{tsconfig.json,tsconfig.node.json,tsconfig.web.json}'
+extraResources:
+  - from: "node_modules/@mcpm/cli"
+    to: "node_modules/@mcpm/cli"
+    filter: ["**/*"]
 asarUnpack:
   - resources/**
 win:
