--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "build:unpack": "npm run build && electron-builder --dir",
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "electron-vite build && electron-builder --mac",
-    "build:linux": "electron-vite build && electron-builder --linux"
+    "build:linux": "electron-vite build && electron-builder --linux",
+    "test": "vitest run"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
+    "@mcpm/cli": "^1.4.6",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.1",
     "electron-updater": "^6.1.7",
