--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@mcpm/cli": "^1.4.6",
+    "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.2",
     "electron-updater": "^6.1.7",
     "lucide-react": "^0.468.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
@@ -58,5 +62,6 @@
     "typescript": "^5.5.2",
     "vite": "^5.3.1",
     "vitest": "^2.1.8"
-  }
+  },
+  "packageManager": "pnpm@9.14.2+sha512.6e2baf77d06b9362294152c851c4f278ede37ab1eba3a55fda317a4a17b209f4dbb973fb250a77abc463a341fcb1f17f17cfa24091c4eb319cda0d9b84278387"
 }
